@startuml

class App
{
public static void main(String[] args)
print(int n)
}
class WordCount
{
    String high = null;
    String middle = null;
    String low = null;
    int b = 0;
    int m = 0;
    int s = 0;
    badger = "badger";
    mushroom = "mushroom";
    snake = "snake";
}

WordCount <|-- App
App <|-- WordCount
@enduml